# selenium

./: Rakefile  WORKSPACE
.github/workflows/: bazel.yml  ci-dotnet.yml  ci-java.yml  ci-javascript.yml  ci-python.yml  ci-ruby.yml  ci.yml  nightly.yml
rb/: BUILD.bazel
rb/lib/selenium/devtools/: BUILD.bazel
rb/lib/selenium/webdriver/common/: local_driver.rb
rb/spec/integration/: BUILD.bazel  configuration.bzl
rb/spec/integration/selenium/webdriver/: BUILD.bazel
rb/spec/integration/selenium/webdriver/bidi/: BUILD.bazel
rb/spec/integration/selenium/webdriver/chrome/: BUILD.bazel  driver_spec.rb
rb/spec/integration/selenium/webdriver/edge/: BUILD.bazel  driver_spec.rb
rb/spec/integration/selenium/webdriver/firefox/: BUILD.bazel
rb/spec/integration/selenium/webdriver/remote/: BUILD.bazel
rb/spec/integration/selenium/webdriver/safari/: BUILD.bazel
rb/spec/integration/selenium/webdriver/spec_support/: test_environment.rb
rb/spec/unit/: BUILD.bazel
rb/spec/unit/selenium/devtools/: BUILD.bazel
rb/spec/unit/selenium/webdriver/: BUILD.bazel
rb/spec/unit/selenium/webdriver/chrome/: BUILD.bazel
rb/spec/unit/selenium/webdriver/common/: BUILD.bazel
rb/spec/unit/selenium/webdriver/common/interactions/: BUILD.bazel
rb/spec/unit/selenium/webdriver/devtools/: BUILD.bazel
rb/spec/unit/selenium/webdriver/edge/: BUILD.bazel
rb/spec/unit/selenium/webdriver/firefox/: BUILD.bazel
rb/spec/unit/selenium/webdriver/ie/: BUILD.bazel
rb/spec/unit/selenium/webdriver/remote/: BUILD.bazel
rb/spec/unit/selenium/webdriver/remote/http/: BUILD.bazel
rb/spec/unit/selenium/webdriver/safari/: BUILD.bazel
rb/spec/unit/selenium/webdriver/support/: BUILD.bazel
