package(default_visibility = ["//rb:__subpackages__"])

# rb_library(
#     name = "integration",
#     srcs = glob(["**/*.rb"]),
#     deps = [
#         "//rb/spec/integration/selenium/webdriver",
#         "//rb/spec/integration/selenium/webdriver/bidi",
#         "//rb/spec/integration/selenium/webdriver/chrome",
#         "//rb/spec/integration/selenium/webdriver/edge",
#         "//rb/spec/integration/selenium/webdriver/firefox",
#         "//rb/spec/integration/selenium/webdriver/remote",
#         "//rb/spec/integration/selenium/webdriver/safari",
#         "//rb/spec/integration/selenium/webdriver/spec_support",
#     ],
# )

BROWSERS = [
    "chrome",
    "edge",
    "firefox",
    "ie",
    "safari",
    "safari-preview",
]

config_setting(
    name = "remote",
    testonly = True,
    define_values = {
        "remote": "true",
    },
)

[
    [
        config_setting(
            name = browser,
            testonly = True,
            define_values = {
                "browser": browser,
            },
        ),
        config_setting(
            name = "remote-" + browser,
            testonly = True,
            define_values = {
                "browser": browser,
                "remote": "true",
            },
        ),
    ]
    for browser in BROWSERS
]
