load("@rules_ruby//ruby:defs.bzl", "rb_library")

package(default_visibility = ["//rb:__subpackages__"])

# List of dependencies can be gathered by running
# bazel query rb/spec/integration/selenium/webdriver/... | xargs -I{} echo '"{}",'
rb_library(
    name = "integration",
    testonly = True,
    deps = [
        "//rb/spec/integration/selenium/webdriver:action_builder",
        "//rb/spec/integration/selenium/webdriver:bidi",
        "//rb/spec/integration/selenium/webdriver:devtools",
        "//rb/spec/integration/selenium/webdriver:driver",
        "//rb/spec/integration/selenium/webdriver:element",
        "//rb/spec/integration/selenium/webdriver:error",
        "//rb/spec/integration/selenium/webdriver:guard",
        "//rb/spec/integration/selenium/webdriver:listener",
        "//rb/spec/integration/selenium/webdriver:manager",
        "//rb/spec/integration/selenium/webdriver:navigation",
        "//rb/spec/integration/selenium/webdriver:select",
        "//rb/spec/integration/selenium/webdriver:shadow_root",
        "//rb/spec/integration/selenium/webdriver:spec_helper",
        "//rb/spec/integration/selenium/webdriver:storage",
        "//rb/spec/integration/selenium/webdriver:takes_screenshot",
        "//rb/spec/integration/selenium/webdriver:target_locator",
        "//rb/spec/integration/selenium/webdriver:timeout",
        "//rb/spec/integration/selenium/webdriver:window",
        "//rb/spec/integration/selenium/webdriver:zipper",
        "//rb/spec/integration/selenium/webdriver/bidi:browsing_context",
        "//rb/spec/integration/selenium/webdriver/bidi:log_inspector",
        "//rb/spec/integration/selenium/webdriver/chrome:driver",
        "//rb/spec/integration/selenium/webdriver/chrome:options",
        "//rb/spec/integration/selenium/webdriver/chrome:profile",
        "//rb/spec/integration/selenium/webdriver/chrome:service",
        "//rb/spec/integration/selenium/webdriver/edge:driver",
        "//rb/spec/integration/selenium/webdriver/edge:options",
        "//rb/spec/integration/selenium/webdriver/edge:profile",
        "//rb/spec/integration/selenium/webdriver/edge:service",
        "//rb/spec/integration/selenium/webdriver/firefox:driver",
        "//rb/spec/integration/selenium/webdriver/firefox:profile",
        "//rb/spec/integration/selenium/webdriver/firefox:service",
        "//rb/spec/integration/selenium/webdriver/remote:driver",
        "//rb/spec/integration/selenium/webdriver/remote:element",
        "//rb/spec/integration/selenium/webdriver/safari:driver",
    ],
)

BROWSERS = [
    "chrome",
    "edge",
    "firefox",
    "ie",
    "safari",
    "safari-preview",
]

[
    [
        config_setting(
            name = browser,
            testonly = True,
            define_values = {
                "browser": browser,
            },
        ),
    ]
    for browser in BROWSERS
]

config_setting(
    name = "headless",
    testonly = True,
    define_values = {
        "headless": "true",
    },
)

config_setting(
    name = "remote",
    testonly = True,
    define_values = {
        "remote": "true",
    },
)
