load("@rules_ruby//ruby:defs.bzl", "rb_library")

package(default_visibility = ["//rb:__subpackages__"])

rb_library(
    name = "unit",
    testonly = True,
    srcs = glob(["**/*.rb"]),
    deps = [
        "//rb/spec/unit/selenium:server",
        "//rb/spec/unit/selenium/webdriver",
        "//rb/spec/unit/selenium/webdriver/chrome",
        "//rb/spec/unit/selenium/webdriver/common",
        "//rb/spec/unit/selenium/webdriver/devtools",
        "//rb/spec/unit/selenium/webdriver/edge",
        "//rb/spec/unit/selenium/webdriver/firefox",
        "//rb/spec/unit/selenium/webdriver/ie",
        "//rb/spec/unit/selenium/webdriver/remote",
        "//rb/spec/unit/selenium/webdriver/safari",
        "//rb/spec/unit/selenium/webdriver/support",
    ],
)
