load("@rules_ruby//ruby:defs.bzl", "rb_library", "rb_test")
load("//rb/spec/integration:configuration.bzl", "ENV", "TAGS")

package(default_visibility = ["//rb:__subpackages__"])

rb_library(
    name = "spec_helper",
    testonly = True,
    srcs = glob([
        "spec_helper.rb",
        "spec_support.rb",
        "spec_support/**/*",
    ]),
    data = [
        "//rb:manager-macos",
        "//rb:manager-windows",
        "//rb:manager-linux",
    ] + select({
        "//rb/spec/integration:remote": ["//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar"],
        "//conditions:default": [],
    }),
)

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/integration/selenium/webdriver/" + file],
        env = ENV,
        main = "@bundle//:bin/rspec",
        tags = TAGS,
        deps = [
            ":spec_helper",
            "//rb/lib/selenium/webdriver:common",
            "@bundle",
        ],
    )
    for file in glob(
        ["*_spec.rb"],
        exclude = [
            "bidi_spec.rb",
            "driver_spec.rb",
            "devtools_spec.rb",
            "element_spec.rb",
        ],
    )
]

rb_test(
    name = "bidi",
    srcs = ["bidi_spec.rb"],
    args = ["rb/spec/"],
    data = select({
        "//rb/spec/integration:remote": ["//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar"],
        "//conditions:default": [],
    }),
    env = ENV,
    main = "@bundle//:bin/rspec",
    tags = TAGS,
    deps = [
        ":spec_helper",
        "//rb/lib/selenium/devtools",
        "//rb/lib/selenium/webdriver:bidi",
        "//rb/lib/selenium/webdriver:common",
        "@bundle",
    ],
)

rb_test(
    name = "devtools",
    srcs = ["devtools_spec.rb"],
    args = ["rb/spec/"],
    data = select({
        "//rb/spec/integration:remote": ["//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar"],
        "//conditions:default": [],
    }),
    env = ENV,
    main = "@bundle//:bin/rspec",
    tags = TAGS,
    deps = [
        ":spec_helper",
        "//rb/lib/selenium/devtools",
        "//rb/lib/selenium/webdriver:bidi",
        "//rb/lib/selenium/webdriver:common",
        "@bundle",
    ],
)

rb_test(
    name = "driver",
    srcs = ["driver_spec.rb"],
    args = ["rb/spec/"],
    data = select({
        "//rb/spec/integration:remote": ["//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar"],
        "//conditions:default": [],
    }),
    env = ENV,
    main = "@bundle//:bin/rspec",
    tags = TAGS,
    deps = [
        ":spec_helper",
        "//rb/lib/selenium/webdriver:chrome",
        "//rb/lib/selenium/webdriver:chromium",
        "//rb/lib/selenium/webdriver:common",
        "//rb/lib/selenium/webdriver:edge",
        "//rb/lib/selenium/webdriver:firefox",
        "//rb/lib/selenium/webdriver:ie",
        "//rb/lib/selenium/webdriver:remote",
        "//rb/lib/selenium/webdriver:safari",
        "@bundle",
    ],
)

rb_test(
    name = "element",
    srcs = ["element_spec.rb"],
    args = ["rb/spec/"],
    data = select({
        "//rb/spec/integration:remote": ["//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar"],
        "//conditions:default": [],
    }),
    env = ENV,
    main = "@bundle//:bin/rspec",
    tags = TAGS,
    deps = [
        ":spec_helper",
        "//rb/lib/selenium/webdriver:chrome",
        "//rb/lib/selenium/webdriver:chromium",
        "//rb/lib/selenium/webdriver:common",
        "//rb/lib/selenium/webdriver:edge",
        "//rb/lib/selenium/webdriver:firefox",
        "//rb/lib/selenium/webdriver:ie",
        "//rb/lib/selenium/webdriver:remote",
        "//rb/lib/selenium/webdriver:safari",
        "@bundle",
    ],
)
