load("@rules_ruby//ruby:defs.bzl", "rb_library", "rb_test")

package(default_visibility = ["//rb:__subpackages__"])

rb_library(
    name = "spec_helper",
    testonly = True,
    srcs = ["spec_helper.rb"],
)

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/unit/selenium/webdriver/" + file],
        main = "@bundle//:bin/rspec",
        deps = [
            ":spec_helper",
            "//rb/lib/selenium/webdriver:common",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
