load("@rules_ruby//ruby:defs.bzl", "rb_test")

package(default_visibility = ["//rb:__subpackages__"])

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/unit/selenium/webdriver/chrome/" + file],
        main = "@bundle//:bin/rspec",
        deps = [
            "//rb/lib/selenium/webdriver:chrome",
            "//rb/lib/selenium/webdriver:common",
            "//rb/spec/unit/selenium/webdriver:spec_helper",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
