load("@rules_ruby//ruby:defs.bzl", "rb_test")

package(default_visibility = ["//rb:__subpackages__"])

rb_test(
    name = "edge",
    srcs = glob(["*_spec.rb"]),
    args = ["rb/spec/"],
    main = "@bundle//:bin/rspec",
    deps = [
        "//rb/lib/selenium/webdriver:common",
        "//rb/lib/selenium/webdriver:edge",
        "@bundle",
    ],
)

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/unit/selenium/webdriver/common/edge/" + file],
        main = "@bundle//:bin/rspec",
        tags = ["manual"],
        deps = [
            "//rb/lib/selenium/webdriver:common",
            "//rb/lib/selenium/webdriver:edge",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
