load("@rules_ruby//ruby:defs.bzl", "rb_test")

package(default_visibility = ["//rb:__subpackages__"])

rb_test(
    name = "firefox",
    srcs = glob(["*_spec.rb"]),
    args = ["rb/spec/"],
    main = "@bundle//:bin/rspec",
    deps = [
        "//rb/lib/selenium/webdriver:common",
        "//rb/lib/selenium/webdriver:firefox",
        "@bundle",
    ],
)

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/unit/selenium/webdriver/common/firefox/" + file],
        main = "@bundle//:bin/rspec",
        tags = ["manual"],
        deps = [
            "//rb/lib/selenium/webdriver:common",
            "//rb/lib/selenium/webdriver:firefox",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
