load("@rules_ruby//ruby:defs.bzl", "rb_test")

package(default_visibility = ["//rb:__subpackages__"])

rb_test(
    name = "support",
    srcs = glob(["*_spec.rb"]),
    args = ["rb/spec/"],
    main = "@bundle//:bin/rspec",
    deps = [
        "//rb/lib/selenium/webdriver:common",
        "@bundle",
    ],
)

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/unit/selenium/webdriver/common/support/" + file],
        main = "@bundle//:bin/rspec",
        tags = ["manual"],
        deps = [
            "//rb/lib/selenium/webdriver:common",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
