load("@rules_ruby//ruby:defs.bzl", "rb_test")

rb_test(
    name = "http",
    srcs = glob(["*_spec.rb"]),
    args = ["rb/spec/"],
    main = "@bundle//:bin/rspec",
    deps = [
        "//rb/lib/selenium/webdriver:common",
        "//rb/lib/selenium/webdriver:remote",
        "@bundle",
    ],
)

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/unit/selenium/webdriver/common/remote/http/" + file],
        main = "@bundle//:bin/rspec",
        tags = ["manual"],
        deps = [
            "//rb/lib/selenium/webdriver:common",
            "//rb/lib/selenium/webdriver:remote",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
